--- a/pyTMLS_4D_testv2.ipynb
+++ b/pyTMLS_4D_testv2.ipynb
@@ -307,9 +307,6 @@
    "cell_type": "raw",
    "id": "876602a4-2bbd-47e5-8fa5-e826abfda0eb",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "source": [
@@ -320,9 +317,6 @@
    "cell_type": "raw",
    "id": "40340d95-3045-45e8-a64f-7d9bc80a9c4f",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "source": [
@@ -333,9 +327,6 @@
    "cell_type": "raw",
    "id": "49c58cf1-d6a7-4d55-b500-82659c2a949c",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "source": [
@@ -359,9 +350,6 @@
    "cell_type": "raw",
    "id": "2b6553b7-5001-4541-8c60-7b07541e2f49",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "source": [
@@ -373,9 +361,6 @@
    "cell_type": "raw",
    "id": "8afa45ef-9a4a-4da6-85dc-a6d227aab0be",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "source": [
@@ -391,9 +376,6 @@
    "execution_count": 44,
    "id": "5586ac1f-9516-4344-b1c9-e01a0b69a70b",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -766,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "id": "45efa62a-177f-4a07-a772-1cfb2c788347",
    "metadata": {},
    "outputs": [],
@@ -1186,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 165,
    "id": "9adf4466-d54e-40b7-a05c-5a7d4bdbdbdd",
    "metadata": {},
    "outputs": [],
@@ -1196,7 +1178,7 @@
     "    num_feat = feat_stack.shape[-1]\n",
     "    ypred = clf.predict(feat_stack.reshape(-1,num_feat))\n",
     "    result = ypred.reshape(feat_stack[...,0].shape).astype(np.uint8)\n",
-    "    return result, clf"
+    "    return result"
    ]
   },
   {
@@ -1697,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "id": "634f5812-f129-4d8c-bbc8-7a0e5b005eb5",
    "metadata": {},
    "outputs": [],
@@ -1707,8 +1689,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "id": "2ac08aaa-a6a4-4c0e-972c-f595819070c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segdata = segdata[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "3d9033d1-625f-47bc-81c4-115a74619c76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(200, 39, 233, 8)"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "segdata.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "db723052-9386-40a1-9799-a1381fa1cdea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segdata = xr.Dataset({'segmented': (['x','y','z','t'],segdata)},\n",
+    "                  coords = {'x': np.arange(segdata.shape[0]),\n",
+    "                            'y': np.arange(segdata.shape[1]),\n",
+    "                            'z': np.arange(segdata.shape[2]),\n",
+    "                            't': np.arange(segdata.shape[3])})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "d46df7d8-086a-4c94-a5ef-c2559217a0d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segoutpath = '/home/fische_r/NAS/testing/testing/Jeremy_tomo/segmented.nc'\n",
+    "segdata.to_netcdf(segoutpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79781305-6d15-488c-976e-7375ba6b712b",
    "metadata": {},
    "outputs": [],
    "source": []
