pretty decent for Jeremy's data

--- a/pyTMLS_4D_testv2_interlaces.ipynb
+++ b/pyTMLS_4D_testv2_interlaces.ipynb
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "cdb1c7b8-85bb-4707-b9ae-15716a621558",
    "metadata": {},
    "outputs": [],
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "06898513-bb61-4052-b95f-3c82a7f5c217",
    "metadata": {},
    "outputs": [],
@@ -833,14 +833,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "412e8e87-adcb-4351-ab29-1a701ecc5dc5",
    "metadata": {},
    "outputs": [],
    "source": [
     "featpath = outpath\n",
     "trainingpath = '/home/fische_r/NAS/testing/Robert_TOMCAT_4'\n",
-    "# feat_data = xr.open_dataset(featpath)\n",
+    "feat_data = xr.load_dataset(featpath)\n",
     "feat_names = feat_data['feature'].data"
    ]
   },
@@ -1890,9 +1890,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "22b2b3d7-393f-4fd3-a4ed-321365a8ad54",
+   "metadata": {},
+   "source": [
+    "### TEsting"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b04bad1-63f0-4418-9257-51c08f910657",
+   "id": "2388f23f-d86f-4103-9701-b63ac5ea7b17",
    "metadata": {},
    "outputs": [],
    "source": []
