I think I have all

--- a/test_dask_framework.ipynb
+++ b/test_dask_framework.ipynb
@@ -7,6 +7,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-08-18 14:45:21,801 - distributed.diskutils - INFO - Found stale lock file and directory '/tmp/dask-worker-space/worker-ehygh630', purging\n",
+      "2022-08-18 14:45:21,801 - distributed.diskutils - INFO - Found stale lock file and directory '/tmp/dask-worker-space/worker-4zgswl0v', purging\n",
+      "2022-08-18 14:45:21,801 - distributed.diskutils - INFO - Found stale lock file and directory '/tmp/dask-worker-space/worker-7a9f4vx5', purging\n",
+      "2022-08-18 14:45:21,801 - distributed.diskutils - INFO - Found stale lock file and directory '/tmp/dask-worker-space/worker-9jcgnr2g', purging\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -49,196 +59,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "16be2672-1d39-489e-b11c-b58e24cf76f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = '/home/fische_r/NAS/testing/Jeremy_tomo/tomodata.nc'\n",
-    "# path = r\"C:\\Zwischenlager\\tomodata.nc\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "3ec2d882-d6e0-46a4-882d-1de1a66e7ba4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "IF = image_filter(data_path=path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "6a59e105-1cce-4d75-a46a-b7998428e645",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "IF.open_raw_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "2bc21c8d-4984-4a24-b3f8-1e1720a52d0e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# IF.data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "36190e50-90b8-4c47-bc5c-d5a5da69a4a7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "IF.prepare()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "de4e35a6-e8dc-4585-b5e7-b608935203b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "IF.stack_features()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "f0e9730e-7887-45d0-961d-a92da744d4d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# IF.feature_stack"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "017fcf9f-eb6b-40ca-a993-840fb659a171",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "IF.make_xarray_nc()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "b8e77886-5624-4a4c-ad25-d71b7fadadd6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# IF.result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "3e6495a9-24d3-42c8-8c3b-992d8eb75440",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# IF.compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "566b620b-fc2b-41f2-9f81-b7012a54889a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# IF.feature_stack.persist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "7d7be12b-64d4-470c-b404-a46dd0bab181",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test = IF.result['feature_stack'].sel(x=0,time=0).data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "8d585cfe-cfc4-494b-87df-37d10b795292",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "d93d06e5-df44-4160-b712-ba7490d13bb2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# training_path = r\"C:\\Zwischenlager\\Jeremy_tomo\"\n",
-    "training_path = '/home/fische_r/NAS/testing/Jeremy_tomo/test2'\n",
-    "if not os.path.exists(training_path):\n",
-    "    os.mkdir(training_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "bb0f444f-c133-4328-b37c-9fd78ca41d75",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TS = train_segmentation(training_path=training_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "2e287f23-ff95-4fe1-af9d-2c9c7ab5c3bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TS.import_lazy_feature_stack(IF.result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "1c3d3654-bb84-4361-b51b-9b4a232442c2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You could try  x = 153  and  z = 210\n"
-     ]
-    }
-   ],
-   "source": [
-    "TS.suggest_training_set()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d3dbc24f-440c-4ef5-8ab8-4379b039f57f",
-   "metadata": {},
-   "source": [
-    "### iterative training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
    "id": "5514ac86-855f-4e80-8dbd-e92358e5878b",
    "metadata": {},
    "outputs": [],
@@ -271,6 +91,197 @@
     "        canvas.stroke_line(position[0], position[1], x, y)\n",
     "        canvas.fill_polygon(shape)\n",
     "    shape = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "16be2672-1d39-489e-b11c-b58e24cf76f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = '/home/fische_r/NAS/testing/Jeremy_tomo/tomodata.nc'\n",
+    "# path = r\"C:\\Zwischenlager\\tomodata.nc\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3ec2d882-d6e0-46a4-882d-1de1a66e7ba4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IF = image_filter(data_path=path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6a59e105-1cce-4d75-a46a-b7998428e645",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IF.open_raw_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2bc21c8d-4984-4a24-b3f8-1e1720a52d0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IF.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "36190e50-90b8-4c47-bc5c-d5a5da69a4a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IF.prepare()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "de4e35a6-e8dc-4585-b5e7-b608935203b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IF.stack_features()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f0e9730e-7887-45d0-961d-a92da744d4d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IF.feature_stack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "017fcf9f-eb6b-40ca-a993-840fb659a171",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IF.make_xarray_nc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b8e77886-5624-4a4c-ad25-d71b7fadadd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IF.result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3e6495a9-24d3-42c8-8c3b-992d8eb75440",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IF.compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "566b620b-fc2b-41f2-9f81-b7012a54889a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IF.feature_stack.persist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7d7be12b-64d4-470c-b404-a46dd0bab181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test = IF.result['feature_stack'].sel(x=0,time=0).data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8d585cfe-cfc4-494b-87df-37d10b795292",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d93d06e5-df44-4160-b712-ba7490d13bb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# training_path = r\"C:\\Zwischenlager\\Jeremy_tomo\"\n",
+    "training_path = '/home/fische_r/NAS/testing/Jeremy_tomo'\n",
+    "if not os.path.exists(training_path):\n",
+    "    os.mkdir(training_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "bb0f444f-c133-4328-b37c-9fd78ca41d75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TS = train_segmentation(training_path=training_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2e287f23-ff95-4fe1-af9d-2c9c7ab5c3bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TS.import_lazy_feature_stack(IF.result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3dbc24f-440c-4ef5-8ab8-4379b039f57f",
+   "metadata": {},
+   "source": [
+    "### iterative training, if you have a training set, skip here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1c3d3654-bb84-4361-b51b-9b4a232442c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You could try  time = 5  and  y = 15\n",
+      "However, please sort it like the original xyztime\n"
+     ]
+    }
+   ],
+   "source": [
+    "TS.suggest_training_set()"
    ]
   },
   {
@@ -334,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "d763e67d-02b8-4b95-906e-b830bd0dd8f1",
    "metadata": {
     "tags": []
@@ -343,7 +354,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "808bd72e334e44a284c279ac751876e5",
+       "model_id": "bf65ca49f28148ac81b78895ea0038c5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -390,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "8915c866-d64b-4990-9ae4-4fd4477c177e",
    "metadata": {},
    "outputs": [],
@@ -406,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "e898ec60-a7e7-468b-a7da-950271af5c27",
    "metadata": {},
    "outputs": [
@@ -414,6 +425,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "now actually calculating the features\n",
       "training and classifying\n"
      ]
     }
@@ -423,9 +435,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "86eb86f4-ad26-462e-8aab-cb3ac5bef9c7",
+   "metadata": {},
+   "source": [
+    "### when done, maybe save the classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "df610acf-d82f-4d10-862a-ac7a13b5867b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TS.pickle_classifier()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "851f03e3-156f-43b6-b50c-b651a0e09596",
+   "metadata": {},
+   "source": [
+    "### use an existing trainingset to train classifier (adhere to label iamge naming convention)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df610acf-d82f-4d10-862a-ac7a13b5867b",
+   "id": "55c32dde-b5a4-4d22-a461-d1ca325ad03b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Need to actually calculate the features ...\n",
+      "Need to actually calculate the features ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# provide new feature data if necessary and say if it is a lazy dask array or not\n",
+    "# TS.feat_data = \n",
+    "# TS.lazy = \n",
+    "\n",
+    "TS.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd1312b7-2cb0-46de-b9a8-2b15d49b62e0",
    "metadata": {},
    "outputs": [],
    "source": []
