updated example notebook

--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -171,19 +171,46 @@
     }
    ],
    "source": [
-    "tempfolder = temppath  #a big SSD is a major adavantage to allow spill to disk and still be efficient. large dataset might crash with too small SSD or be slow with normal HDD\n",
-    "dask.config.config['temporary-directory'] = tempfolder\n",
+    "dask.config.config['temporary-directory'] = temppath\n",
+    "def boot_client():\n",
+    "    tempfolder = temppath  #a big SSD is a major adavantage to allow spill to disk and still be efficient. large dataset might crash with too small SSD or be slow with normal HDD\n",
+    "# tempfolder = temppath_2\n",
+    "# dask.config.config['distributed']['worker']['memory']['recent-to-old-time'] = '200000s'\n",
     "\n",
     "# here you have the option to use a virtual cluster or even slurm on ra (not attempted yet)\n",
-    "cluster = LocalCluster(dashboard_address=':35000', memory_limit = memlim, n_workers=2) #settings optimised for mpc2959, play around if needed, if you know nothing else is using RAM then you can almost go to the limit\n",
+    "    cluster = LocalCluster(dashboard_address=':35000', memory_limit = memlim, n_workers=2) #settings optimised for mpc2959, play around if needed, if you know nothing else is using RAM then you can almost go to the limit\n",
     "# # maybe less workers with more threads makes better use of shared memory \n",
     "\n",
     "# # scheduler_port = 'tcp://129.129.188.222:8786' #<-- if scheduler on mpc2959; scheduler on mpc2053 -> 'tcp://129.129.188.248:8786'\n",
     "# # cluster = scheduler_port\n",
     "\n",
-    "client = Client(cluster)\n",
+    "    client = Client(cluster)\n",
     "# # client.amm.start()\n",
-    "print('Dashboard at '+client.dashboard_link)\n"
+    "    print('Dashboard at '+client.dashboard_link)\n",
+    "    return client, cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "476bc714-b361-4569-bbf1-eb037a817e06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reboot_client(client, cluster):\n",
+    "    client.shutdown()\n",
+    "    client = Client(cluster)\n",
+    "    return client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8ed9556-09fb-480d-b670-d8d5f5e81e5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client, cluster = boot_client()"
    ]
   },
   {
@@ -762,18 +789,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "b5577d73-1fb1-4668-b704-89bd0ffe9e91",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "TS = train_segmentation(training_path=training_path_sample)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 33,
    "id": "a8d8d911-acaa-49e4-8e8a-6a57e9d7965d",
    "metadata": {
@@ -781,9 +796,11 @@
    },
    "outputs": [],
    "source": [
-    "#quick and dirty fix to pass the dask client to the filter and training objects\n",
+    "TS = train_segmentation(training_path=training_path_sample)\n",
     "TS.client = client\n",
-    "IF.client = client"
+    "IF.client = client\n",
+    "TS.cluster = cluster\n",
+    "IF.cluster = cluster"
    ]
   },
   {
@@ -1355,23 +1372,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# time dependent features\n",
     "if type(feat_stack) is not np.ndarray:\n",
     "        fut = client.scatter(feat_stack)\n",
     "        fut = fut.result()\n",
     "        fut = fut.compute()\n",
     "        feat_stack = fut\n",
-    "        client.restart()\n",
+    "        client.restart()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43a91739-a8ce-4905-8ff1-c8fd28d6b9af",
+   "metadata": {},
+   "source": [
+    "#### reboot cluster if workers do not return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15c45866-4b94-48f9-b8e4-b7ec0f0f42a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(client.cluster.workers)\n",
     "\n",
+    "if not len(client.cluster.workers)>0:   \n",
+    "    client = reboot_client(client, cluster)\n",
+    "    TS.client = client\n",
+    "    IF.client = client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebe6703f-3369-41a2-865d-8fb517db724e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# time independent features\n",
     "if type(feat_stack_t_idp) is not np.ndarray:\n",
     "        fut = client.scatter(feat_stack_t_idp)\n",
     "        fut = fut.result()\n",
     "        fut = fut.compute()\n",
     "        feat_stack_t_idp = fut\n",
     "        client.restart()\n",
-    "    \n",
-    "\n",
-    " \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8477dd4-531b-47cb-adb3-2cdc139f0847",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not len(client.cluster.workers)>0:\n",
+    "    client = reboot_client(client, cluster)\n",
+    "    TS.client = client\n",
+    "    IF.client = client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1e80e3c-8093-4bdb-8985-31f0416f9024",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# put features together\n",
     "feat_stack = np.concatenate([feat_stack, feat_stack_t_idp], axis = 2)"
    ]
   },
@@ -1431,27 +1501,24 @@
    ],
    "source": [
     "alpha = 0.15\n",
+    "# zoom1 = (-500,-1)\n",
+    "# zoom2 = (600,1400)\n",
     "\n",
-    "# legacy function to zoom by selecting ROI\n",
-    "# better: use laptop trackpad (or sth similar) to zoom in webbrowser, not the CTRL+mousewheel zoom\n",
-    "zoom1 = (-500,-1)\n",
-    "zoom2 = (600,1400)\n",
-    "\n",
-    "zoom1 = (0, -1)\n",
-    "zoom2 = (0, -1)\n",
+    "# zoom1 = (0, -1)\n",
+    "# zoom2 = (0, -1)\n",
     "\n",
     "# im8 = TS.current_im8\n",
     "#trick: use gaussian_time_4_0 to label static phases ()\n",
     "# im8 = display_feature(-2, TS)\n",
     "# im8 = display_feature(-20, TS)\n",
-    "# print(IF.combined_feature_names[-20]) #helps to find the correct image filter\n",
+    "# print(IF.combined_feature_names[-20])\n",
     "print('original shape: ',im8.shape)\n",
-    "im8_display = im8.copy()[zoom1[0]:zoom1[1], zoom2[0]:zoom2[1]]\n",
-    "print('diyplay shape : ',im8_display.shape,' at: ', (zoom1[0], zoom2[0]))\n",
+    "im8_display = im8.copy() #[zoom1[0]:zoom1[1], zoom2[0]:zoom2[1]]\n",
+    "# print('diyplay shape : ',im8_display.shape,' at: ', (zoom1[0], zoom2[0]))\n",
     "\n",
     "resultim = TS.current_result.copy()\n",
     "\n",
-    "resultim_display = resultim[zoom1[0]:zoom1[1], zoom2[0]:zoom2[1]]\n",
+    "resultim_display = resultim #[zoom1[0]:zoom1[1], zoom2[0]:zoom2[1]]\n",
     "\n",
     "\n",
     "width = im8_display.shape[1]\n",
@@ -1470,7 +1537,10 @@
     "slidealpha = IntSlider(description=\"Result overlay\", value=0.15)\n",
     "resultdisplay.global_alpha = alpha #slidealpha.value\n",
     "if np.any(resultim>0):\n",
-    "    result_data = np.stack((255*(resultim_display==0), 255*(resultim_display==1), 255*(resultim_display==2)), axis=2)\n",
+    "    result_data = np.stack(((resultim_display==0), (resultim_display==1),(resultim_display==2)), axis=2)*255\n",
+    "    mask3 = resultim_display==3\n",
+    "    result_data[mask3,0] = 255\n",
+    "    result_data[mask3,1] = 255\n",
     "else:\n",
     "    result_data = np.stack((0*resultim, 0*resultim, 0*resultim), axis=2)\n",
     "resultdisplay.put_image_data(result_data, 0, 0)\n",
@@ -1582,10 +1652,14 @@
    "source": [
     "label_set = canvas.get_image_data()\n",
     "\n",
-    "TS.current_truth[zoom1[0]:zoom1[1], zoom2[0]:zoom2[1]][label_set[:,:,0]>0] = 1\n",
-    "TS.current_truth[zoom1[0]:zoom1[1], zoom2[0]:zoom2[1]][label_set[:,:,1]>0] = 2\n",
-    "TS.current_truth[zoom1[0]:zoom1[1], zoom2[0]:zoom2[1]][label_set[:,:,2]>0] = 4\n",
+    "test = TS.current_truth.copy()\n",
     "\n",
+    "test[np.bitwise_and(label_set[:,:,0]>0,np.bitwise_xor(label_set[:,:,0]>0,label_set[:,:,1]>0))] = 1\n",
+    "test[label_set[:,:,1]>0] = 2\n",
+    "test[label_set[:,:,2]>0] = 4 #order of 4&3 flipped for legacy reasons (existing training labels)\n",
+    "test[np.bitwise_and(label_set[:,:,0]>0,label_set[:,:,1]>0)] = 3\n",
+    "\n",
+    "TS.current_truth = test.copy()\n",
     "imageio.imsave(TS.current_truthpath, TS.current_truth)"
    ]
   },
