pre unsharp mask seems to work

--- a/V2_example_notebook.ipynb
+++ b/V2_example_notebook.ipynb
@@ -62,6 +62,11 @@
     "    training_path = '/home/esrf/rofische/data_robert/Tomcat_2'\n",
     "    pytrainpath = '/home/esrf/rofische/lib/pytrainseg'\n",
     "    memlim = '650GB'\n",
+    "elif host[:4] == 'hpc8': # experiment with the wood data on the big ESRF cluster node with ubuntu24\n",
+    "    temppath = '/tmp/robert'\n",
+    "    training_path = '/home/esrf/rofische/data_robert/Tomcat_2'\n",
+    "    pytrainpath = '/home/esrf/rofische/lib/pytrainseg'\n",
+    "    memlim = '650GB'\n",
     "    \n",
     "else:\n",
     "    print('host '+host+' currently not supported')\n",
@@ -270,7 +275,7 @@
    "source": [
     "# TODO: include this routine into pytrainseg\n",
     "\n",
-    "IF = image_filter(sigmas = [0,1,3,6]) \n",
+    "IF = image_filter(sigmas = [0,1,3,6], preprocess_with_unsharp_mask=True) \n",
     "IF.data = da\n",
     "shp = da.shape\n",
     "shp_raw = shp"
@@ -404,7 +409,7 @@
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <th> Dask graph </th>\n",
-       "                        <td colspan=\"2\"> 1481760 chunks in 440 graph layers </td>\n",
+       "                        <td colspan=\"2\"> 1481760 chunks in 400 graph layers </td>\n",
        "                    </tr>\n",
        "                    <tr>\n",
        "                        <th> Data type </th>\n",
@@ -716,14 +721,20 @@
       "label_image_x_590_time_99_.tif\n",
       "label_image_x_658_time_80_.tif\n",
       "label_image_y_300_time_36_.tif\n",
+      "label_image_y_305_time_16_.tif\n",
       "label_image_y_329_time_83_.tif\n",
       "label_image_y_80_time_67_.tif\n",
       "label_image_z_1004_time_65_.tif\n",
       "label_image_z_100_time_88_.tif\n",
       "label_image_z_1104_time_64_.tif\n",
       "label_image_z_1304_time_51_.tif\n",
+      "label_image_z_1371_time_58_.tif\n",
+      "label_image_z_151_time_23_.tif\n",
+      "label_image_z_1734_time_40_.tif\n",
       "label_image_z_1900_time_55_.tif\n",
       "label_image_z_200_time_80_.tif\n",
+      "label_image_z_367_time_75_.tif\n",
+      "label_image_z_420_time_82_.tif\n",
       "label_image_z_42_time_30_.tif\n",
       "label_image_z_433_time_90_.tif\n",
       "label_image_z_900_time_71_.tif\n"
@@ -993,8 +1004,7 @@
      "output_type": "stream",
      "text": [
       "training with existing label images\n",
-      "label_image_z_42_time_30_.tif already done\n",
-      "label_image_x_658_time_80_.tif\n"
+      "label_image_z_42_time_30_.tif\n"
      ]
     }
    ],
