replaced Hessian matrix with Laplace filter

--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -77,9 +77,9 @@
     "\n",
     "cwd = os.getcwd()\n",
     "os.chdir(pytrainpath)\n",
-    "from V2_feature_stack import image_filter\n",
-    "import V2_training as tfs\n",
-    "from V2_training import training\n",
+    "from feature_stack import image_filter\n",
+    "import training as tfs\n",
+    "from training import training\n",
     "\n",
     "pytrain_git_sha = subprocess.check_output(['git', 'rev-parse', '--short', 'HEAD']).decode().strip()\n",
     "os.chdir(cwd)\n",
