--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -873,12 +873,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "60943ced-cbdd-499a-b869-9f4d52292259",
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_prefix = '2025-06-25_git_sha_c0268fd'\n",
+    "training_prefix = '2025-06-27_git_sha_2e3902f'\n",
     "TS.previous_training_dict = pickle.load(open(os.path.join(training_path, training_prefix+'_training_dict.p'), 'rb'))\n",
     "TS.previous_feature_names = pickle.load(open(os.path.join(training_path, training_prefix+'_feature_names.p'), 'rb'))"
    ]
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "92da87f4-e323-4998-b410-427f5801f603",
    "metadata": {},
    "outputs": [],
@@ -927,13 +927,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "8644b995-120c-4174-8c03-99e23aa6385b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# TS.training_dict = {}\n",
     "TS.training_dict = TS.previous_training_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7bc095e8-ed4e-48ec-b497-fb80a81efdf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['label_image_y_632_time_113_.tif', 'label_image_z_103_time_95_.tif', 'label_image_y_922_time_15_.tif', 'label_image_z_720_time_39_.tif', 'label_image_y_887_time_43_.tif', 'label_image_y_1002_time_40_.tif'])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TS.training_dict.keys()"
    ]
   },
   {
@@ -949,12 +970,42 @@
      "output_type": "stream",
      "text": [
       "training with existing label images\n",
-      "label_image_y_632_time_113_.tif\n"
+      "label_image_y_632_time_113_.tif already done\n",
+      "label_image_z_103_time_95_.tif already done\n",
+      "label_image_y_922_time_15_.tif already done\n",
+      "label_image_z_720_time_39_.tif already done\n",
+      "label_image_y_887_time_43_.tif already done\n",
+      "label_image_y_1002_time_40_.tif already done\n",
+      "label_image_x_1059_time_69_.tif\n",
+      "label image is empty\n",
+      "label_image_z_1002_time_2_.tif\n"
      ]
     }
    ],
    "source": [
     "TS.train()  #does not actually already train a classifier, but creates a training data set based on existing label images and the feature stack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bad07ee0-bced-4e39-8143-9620033e0ce7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date = str(datetime.datetime.now().date())\n",
+    "pickle.dump(TS.training_dict, open(os.path.join(training_path, date+'_git_sha_'+pytrain_git_sha+'_training_dict.p'),'wb'))\n",
+    "pickle.dump(TS.combined_feature_names, open(os.path.join(training_path, date+'_git_sha_'+pytrain_git_sha+'_feature_names.p'),'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca456291-858c-4f95-9a90-e1eb59b4a676",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date+'_git_sha_'+pytrain_git_sha"
    ]
   },
   {
