--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -980,6 +980,21 @@
       "label image is empty\n",
       "label_image_z_1002_time_2_.tif\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-28 10:55:00,723 - distributed.diskutils - ERROR - Failed to remove '/tmp_14_days/robert/dask-scratch-space/worker-h4u8lajw' (failed in <built-in function lstat>): [Errno 2] No such file or directory: '/tmp_14_days/robert/dask-scratch-space/worker-h4u8lajw'\n",
+      "2025-06-28 10:55:00,759 - distributed.diskutils - ERROR - Failed to remove '/tmp_14_days/robert/dask-scratch-space/worker-lhm9lp6h' (failed in <built-in function lstat>): [Errno 2] No such file or directory: '/tmp_14_days/robert/dask-scratch-space/worker-lhm9lp6h'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "label_image_z_659_time_63_.tif\n"
+     ]
     }
    ],
    "source": [
