--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -878,7 +878,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_prefix = '2025-06-27_git_sha_2e3902f'\n",
+    "training_prefix = '2025-06-28_git_sha_ecf0722'\n",
     "TS.previous_training_dict = pickle.load(open(os.path.join(training_path, training_prefix+'_training_dict.p'), 'rb'))\n",
     "TS.previous_feature_names = pickle.load(open(os.path.join(training_path, training_prefix+'_feature_names.p'), 'rb'))"
    ]
@@ -945,7 +945,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['label_image_y_632_time_113_.tif', 'label_image_z_103_time_95_.tif', 'label_image_y_922_time_15_.tif', 'label_image_z_720_time_39_.tif', 'label_image_y_887_time_43_.tif', 'label_image_y_1002_time_40_.tif'])"
+       "dict_keys(['label_image_y_632_time_113_.tif', 'label_image_z_103_time_95_.tif', 'label_image_y_922_time_15_.tif', 'label_image_z_720_time_39_.tif', 'label_image_y_887_time_43_.tif', 'label_image_y_1002_time_40_.tif', 'label_image_z_1002_time_2_.tif', 'label_image_z_659_time_63_.tif', 'label_image_z_364_time_103_.tif'])"
       ]
      },
      "execution_count": 23,
@@ -978,22 +978,10 @@
       "label_image_y_1002_time_40_.tif already done\n",
       "label_image_x_1059_time_69_.tif\n",
       "label image is empty\n",
-      "label_image_z_1002_time_2_.tif\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-06-28 10:55:00,723 - distributed.diskutils - ERROR - Failed to remove '/tmp_14_days/robert/dask-scratch-space/worker-h4u8lajw' (failed in <built-in function lstat>): [Errno 2] No such file or directory: '/tmp_14_days/robert/dask-scratch-space/worker-h4u8lajw'\n",
-      "2025-06-28 10:55:00,759 - distributed.diskutils - ERROR - Failed to remove '/tmp_14_days/robert/dask-scratch-space/worker-lhm9lp6h' (failed in <built-in function lstat>): [Errno 2] No such file or directory: '/tmp_14_days/robert/dask-scratch-space/worker-lhm9lp6h'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "label_image_z_659_time_63_.tif\n"
+      "label_image_z_1002_time_2_.tif already done\n",
+      "label_image_z_659_time_63_.tif already done\n",
+      "label_image_z_364_time_103_.tif already done\n",
+      "label_image_y_554_time_89_.tif\n"
      ]
     }
    ],
@@ -1343,10 +1331,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "id": "8c25dde1-5156-4f55-8643-62ad87982a77",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TimeoutError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mCancelledError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/conda_x86/miniforge3/lib/python3.12/site-packages/distributed/utils.py:1923\u001b[39m, in \u001b[36mwait_for\u001b[39m\u001b[34m(fut, timeout)\u001b[39m\n\u001b[32m   1922\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m asyncio.timeout(timeout):\n\u001b[32m-> \u001b[39m\u001b[32m1923\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mawait\u001b[39;00m fut\n",
+      "\u001b[31mCancelledError\u001b[39m: ",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mTimeoutError\u001b[39m                              Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# # reboot the dask client if it lost a worker\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(client.cluster.workers)>\u001b[32m1\u001b[39m:   \n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     client = \u001b[43mreboot_client\u001b[49m\u001b[43m(\u001b[49m\u001b[43mclient\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m     TS.client = client\n\u001b[32m      5\u001b[39m     IF.client = client\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 20\u001b[39m, in \u001b[36mreboot_client\u001b[39m\u001b[34m(client, dashboard_address, memory_limit, n_workers)\u001b[39m\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mreboot_client\u001b[39m(client, dashboard_address=\u001b[33m'\u001b[39m\u001b[33m:35000\u001b[39m\u001b[33m'\u001b[39m, memory_limit = memlim, n_workers=\u001b[32m2\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m20\u001b[39m     \u001b[43mclient\u001b[49m\u001b[43m.\u001b[49m\u001b[43mshutdown\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     21\u001b[39m     cluster = LocalCluster(dashboard_address=dashboard_address, memory_limit = memory_limit, n_workers=n_workers, silence_logs=logging.ERROR)\n\u001b[32m     22\u001b[39m     client = Client(cluster)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/conda_x86/miniforge3/lib/python3.12/site-packages/distributed/client.py:2006\u001b[39m, in \u001b[36mClient.shutdown\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1996\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mshutdown\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m   1997\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Shut down the connected scheduler and workers\u001b[39;00m\n\u001b[32m   1998\u001b[39m \n\u001b[32m   1999\u001b[39m \u001b[33;03m    Note, this may disrupt other clients that may be using the same\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m   2004\u001b[39m \u001b[33;03m    Client.close : close only this client\u001b[39;00m\n\u001b[32m   2005\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m2006\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43msync\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_shutdown\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/conda_x86/miniforge3/lib/python3.12/site-packages/distributed/utils.py:376\u001b[39m, in \u001b[36mSyncMethodMixin.sync\u001b[39m\u001b[34m(self, func, asynchronous, callback_timeout, *args, **kwargs)\u001b[39m\n\u001b[32m    374\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m future\n\u001b[32m    375\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m376\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43msync\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    377\u001b[39m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mloop\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcallback_timeout\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcallback_timeout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\n\u001b[32m    378\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/conda_x86/miniforge3/lib/python3.12/site-packages/distributed/utils.py:452\u001b[39m, in \u001b[36msync\u001b[39m\u001b[34m(loop, func, callback_timeout, *args, **kwargs)\u001b[39m\n\u001b[32m    449\u001b[39m         wait(\u001b[32m10\u001b[39m)\n\u001b[32m    451\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m error \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m452\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m error\n\u001b[32m    453\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    454\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/conda_x86/miniforge3/lib/python3.12/site-packages/distributed/utils.py:426\u001b[39m, in \u001b[36msync.<locals>.f\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    424\u001b[39m         awaitable = wait_for(awaitable, timeout)\n\u001b[32m    425\u001b[39m     future = asyncio.ensure_future(awaitable)\n\u001b[32m--> \u001b[39m\u001b[32m426\u001b[39m     result = \u001b[38;5;28;01myield\u001b[39;00m future\n\u001b[32m    427\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m exception:\n\u001b[32m    428\u001b[39m     error = exception\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/conda_x86/miniforge3/lib/python3.12/site-packages/tornado/gen.py:769\u001b[39m, in \u001b[36mRunner.run\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    767\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    768\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m769\u001b[39m         value = \u001b[43mfuture\u001b[49m\u001b[43m.\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    770\u001b[39m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m    771\u001b[39m         \u001b[38;5;66;03m# Save the exception for later. It's important that\u001b[39;00m\n\u001b[32m    772\u001b[39m         \u001b[38;5;66;03m# gen.throw() not be called inside this try/except block\u001b[39;00m\n\u001b[32m    773\u001b[39m         \u001b[38;5;66;03m# because that makes sys.exc_info behave unexpectedly.\u001b[39;00m\n\u001b[32m    774\u001b[39m         exc: Optional[\u001b[38;5;167;01mException\u001b[39;00m] = e\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/conda_x86/miniforge3/lib/python3.12/site-packages/distributed/client.py:1989\u001b[39m, in \u001b[36mClient._shutdown\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1987\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m._wait_for_handle_report_task():\n\u001b[32m   1988\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.cluster:\n\u001b[32m-> \u001b[39m\u001b[32m1989\u001b[39m         \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m.cluster.close()\n\u001b[32m   1990\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   1991\u001b[39m         \u001b[38;5;28;01mwith\u001b[39;00m suppress(CommClosedError):\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/conda_x86/miniforge3/lib/python3.12/site-packages/distributed/deploy/spec.py:455\u001b[39m, in \u001b[36mSpecCluster._close\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    453\u001b[39m     \u001b[38;5;28;01mawait\u001b[39;00m f\n\u001b[32m    454\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m._correct_state()\n\u001b[32m--> \u001b[39m\u001b[32m455\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m asyncio.gather(*\u001b[38;5;28mself\u001b[39m._futures)\n\u001b[32m    457\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.scheduler_comm:\n\u001b[32m    458\u001b[39m     \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m._lock:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/conda_x86/miniforge3/lib/python3.12/site-packages/distributed/nanny.py:619\u001b[39m, in \u001b[36mNanny.close\u001b[39m\u001b[34m(self, timeout, reason)\u001b[39m\n\u001b[32m    617\u001b[39m \u001b[38;5;28mself\u001b[39m.stop()\n\u001b[32m    618\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.process \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m619\u001b[39m     \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m.kill(timeout=timeout, reason=reason)\n\u001b[32m    621\u001b[39m \u001b[38;5;28mself\u001b[39m.process = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m    622\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m.rpc.close()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/conda_x86/miniforge3/lib/python3.12/site-packages/distributed/nanny.py:400\u001b[39m, in \u001b[36mNanny.kill\u001b[39m\u001b[34m(self, timeout, reason)\u001b[39m\n\u001b[32m    394\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Kill the local worker process\u001b[39;00m\n\u001b[32m    395\u001b[39m \n\u001b[32m    396\u001b[39m \u001b[33;03mBlocks until both the process is down and the scheduler is properly\u001b[39;00m\n\u001b[32m    397\u001b[39m \u001b[33;03minformed\u001b[39;00m\n\u001b[32m    398\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    399\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.process \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m400\u001b[39m     \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m.process.kill(reason=reason, timeout=timeout)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/conda_x86/miniforge3/lib/python3.12/site-packages/distributed/nanny.py:883\u001b[39m, in \u001b[36mWorkerProcess.kill\u001b[39m\u001b[34m(self, timeout, executor_wait, reason)\u001b[39m\n\u001b[32m    879\u001b[39m     logger.warning(\n\u001b[32m    880\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mWorker process still alive after \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mwait_timeout\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.1f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m seconds, killing\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    881\u001b[39m     )\n\u001b[32m    882\u001b[39m     \u001b[38;5;28;01mawait\u001b[39;00m process.kill()\n\u001b[32m--> \u001b[39m\u001b[32m883\u001b[39m     \u001b[38;5;28;01mawait\u001b[39;00m process.join(\u001b[38;5;28mmax\u001b[39m(\u001b[32m0\u001b[39m, deadline - time()))\n\u001b[32m    884\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m    885\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33minvalid operation on closed AsyncProcess\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(e):\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/conda_x86/miniforge3/lib/python3.12/site-packages/distributed/process.py:330\u001b[39m, in \u001b[36mAsyncProcess.join\u001b[39m\u001b[34m(self, timeout)\u001b[39m\n\u001b[32m    327\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[32m    328\u001b[39m \u001b[38;5;66;03m# Shield otherwise the timeout cancels the future and our\u001b[39;00m\n\u001b[32m    329\u001b[39m \u001b[38;5;66;03m# on_exit callback will try to set a result on a canceled future\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m330\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m wait_for(asyncio.shield(\u001b[38;5;28mself\u001b[39m._exit_future), timeout)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/conda_x86/miniforge3/lib/python3.12/site-packages/distributed/utils.py:1922\u001b[39m, in \u001b[36mwait_for\u001b[39m\u001b[34m(fut, timeout)\u001b[39m\n\u001b[32m   1921\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mwait_for\u001b[39m(fut: Awaitable[T], timeout: \u001b[38;5;28mfloat\u001b[39m) -> T:\n\u001b[32m-> \u001b[39m\u001b[32m1922\u001b[39m     \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m asyncio.timeout(timeout):\n\u001b[32m   1923\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mawait\u001b[39;00m fut\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/conda_x86/miniforge3/lib/python3.12/asyncio/timeouts.py:115\u001b[39m, in \u001b[36mTimeout.__aexit__\u001b[39m\u001b[34m(self, exc_type, exc_val, exc_tb)\u001b[39m\n\u001b[32m    110\u001b[39m     \u001b[38;5;28mself\u001b[39m._state = _State.EXPIRED\n\u001b[32m    112\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m._task.uncancel() <= \u001b[38;5;28mself\u001b[39m._cancelling \u001b[38;5;129;01mand\u001b[39;00m exc_type \u001b[38;5;129;01mis\u001b[39;00m exceptions.CancelledError:\n\u001b[32m    113\u001b[39m         \u001b[38;5;66;03m# Since there are no new cancel requests, we're\u001b[39;00m\n\u001b[32m    114\u001b[39m         \u001b[38;5;66;03m# handling this.\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m115\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTimeoutError\u001b[39;00m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mexc_val\u001b[39;00m\n\u001b[32m    116\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m._state \u001b[38;5;129;01mis\u001b[39;00m _State.ENTERED:\n\u001b[32m    117\u001b[39m     \u001b[38;5;28mself\u001b[39m._state = _State.EXITED\n",
+      "\u001b[31mTimeoutError\u001b[39m: "
+     ]
+    }
+   ],
    "source": [
     "# # reboot the dask client if it lost a worker\n",
     "if not len(client.cluster.workers)>1:   \n",
